# django-template

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  test.py
.claude/: settings.local.json
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/backend/: Dockerfile  devcontainer.json
.devcontainer/nginx/: nginx.conf
.docker/backend/: Dockerfile
.docker/minio/: init_minio.sh
.docker/nginx/: nginx.conf
.github/workflows/: build-push.yml  cicd.yml  deploy.yml
.zed/: settings.json
backend/: conftest.py  pyproject.toml  pyrightconfig.json
backend/apps/common/: firebase.py  generators.py  models.py  request.py  utils.py  validators.py
backend/apps/common/management/commands/: media_dump.py  media_info.py  media_load.py  rewrite_media_urls.py  wait_for_storage.py
backend/apps/stdimage/management/commands/: rendervariations.py
backend/apps/users/: admin.py  apps.py  models.py  signals.py
backend/apps/users/locale/en/LC_MESSAGES/: django.po
backend/apps/users/locale/ru/LC_MESSAGES/: django.po
backend/apps/users/management/commands/: createsuperuserauto.py
backend/apps/users/migrations/: 0001_initial.py  0002_emailverificationtoken.py
backend/common/: request.py  utils.py
backend/config/: celery.py  urls.py
backend/config/settings/: __init__.py  auth.py  base.py  database.py  dev.py  installed_apps.py  localization.py  logging.py  middleware.py  rest_framework.py  rosetta.py  settings.py  storages.py  templates.py  test.py  third_party.py
backend/locale/en/LC_MESSAGES/: django.po
backend/locale/ru/LC_MESSAGES/: django.po
backend/scripts/: clear_app.py  entrypoint.sh  run-celery-beat.sh  run-celery-worker.sh
backend/templates/drf_spectacular/: swagger_ui.html
backend/tests/: conftest.py  test_common.py  test_generators.py  test_user_email.py  test_user_model.py  test_users.py
docker/backend/: Dockerfile
docker/nginx/: Dockerfile
docs/: backup.md  deploy.md  stdimage.md  uv.md
minio/policies/: bucket-public-read.json  user-app.json
nginx/: nginx.conf  nginx.dev.conf
scripts/: connect_to_backend.sh  connect_to_db.sh  connect_to_nginx.sh  docker-compose-dev.sh  dump_all.sh  ensure_minio.sh  ensure_minio_bucket.sh  init_env.sh  redis_flushall.sh  restore-all.sh  restore_all.sh  run-django-shell.sh
