[project]
name = "app"
version = "0.1.0"
description = ""
authors = [{ name = "igorkhaylov" }]
requires-python = ">=3.13,<4"
dependencies = [
    "django>=5.2.4,<6.0.0",
    "psycopg[binary]>=3.2.9,<4.0.0",
    "pillow>=11.3.0,<12.0.0",
    "python-decouple>=3.8,<4.0",
    "django-cors-headers>=4.7.0,<5.0.0",
    "djangorestframework>=3.16.0,<4.0.0",
    "gunicorn>=23.0.0,<24.0.0",
    "setproctitle>=1.3.6,<2.0.0",
    "firebase-admin>=7.1.0,<8.0.0",
    "django-rosetta>=0.10.2,<0.11.0",
    "django-modeltranslation>=0.19.17,<0.20.0",
    "drf-spectacular>=0.28.0,<0.29.0",
    "django-filter>=25.1,<26.0",
    "python-dateutil>=2.9.0.post0,<3.0.0",
    "redis>=6.4.0,<7.0.0",
    "celery>=5.5.3,<6.0.0",
    "django-storages[s3]>=1.14.6,<2.0.0",
    "django-cleanup>=9.0.0,<10.0.0",
    "django-structlog>=8.1.0,<10.0.0",
    "structlog>=24.1.0",
    "django-stdimage @ git+https://github.com/igorkhaylov/django-stdimage.git@v1.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-django>=4.9.0",
    "django-debug-toolbar>=6.0.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "pyright>=1.1.408",
]

# This project is an application, not a distributable package: uv only manages the
# environment and never tries to build/install the project root itself.
[tool.uv]
package = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py"]
testpaths = ["tests"]
pythonpath = ["."]
# The template intentionally ships without migration files (see README). --no-migrations
# tells pytest-django to build the test schema directly from the models, so the suite
# runs even before you generate your initial migrations.
addopts = "--no-migrations"

[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = ["**/migrations/**"]

[tool.ruff.lint]
# E/F pycodestyle+pyflakes, I isort, UP pyupgrade, B bugbear, C4 comprehensions,
# SIM simplify, DJ flake8-django, RUF ruff-native.
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "DJ", "RUF"]
# RUF012 wants typing.ClassVar on every mutable class attribute. That fires on idiomatic
# Django/DRF Meta options (constraints, indexes, fields, fieldsets, ...) and on plain class
# constants — too noisy for a Django codebase, so it is disabled project-wide.
ignore = ["RUF012"]

[tool.ruff.lint.per-file-ignores]
# Star-imports / re-exports are intentional in the split settings package and __init__ files.
# Globs are prefixed with **/ so they match whether ruff runs from backend/ or the repo root
# (pre-commit invokes it from the root, passing backend/config/settings/... paths).
"**/__init__.py" = ["F401", "F403", "F405"]
"**/config/settings/*" = ["F401", "F403", "F405"]

[tool.ruff.lint.isort]
known-first-party = ["config", "users", "common"]
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
django = ["django"]
